Implemented type converter to handle binary files as URLs instead of a byte arrays ( BACKLOG-5727 )